# AOC2023

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  solution.rs
solutions/: Cargo.toml
solutions/src/: lib.rs  main.rs
solutions/src/days/: day_00.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
src/: main.rs
src/days/: mod.rs
ui/: Cargo.toml
ui-support/: Cargo.toml
ui-support/src/: display_data.rs  display_request.rs  display_result.rs  lib.rs  shape.rs
ui/src/: days.rs  main.rs
ui/src/days/: visualization_data.rs
