[package]
name = "aoc2023"
version.workspace = true
edition.workspace = true


[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1"
regex = "1"
reqwest = "0.11.*"

common = { path = "./../common" }
async-trait = "0.1.68"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
