[package]
name = "aoc2023"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
common = { path = "./../common" }

async-trait = "0.1.68"
chrono = "0.4.31"
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1"
rayon = "1.8.0"
regex = "1"
reqwest = "0.11.*"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }

egui = { version = "0.24.1", optional = true}
ui-support = { path = "./../ui-support", optional = true  }
ahash = { version = "0.8.6", optional = true }

[features]
default = ["performance"]
performance = ["dep:ahash"]
ui = ["egui", "ui-support"]
